--- a/better-professor/package.json
+++ b/better-professor/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "react": "^16.9.0",
+    "react-browser-router": "^2.1.2",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
@@ -12,6 +13,7 @@
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "semantic-ui-react": "^0.88.0",
     "styled-components": "^4.3.2"
   },
   "scripts": {
